--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.30",
         "doctrine/lexer": "^3.0",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.8.0",
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^9.52.15",
